added final slides and training materials for day 1

--- a/training-materials/presentation/intro.html
+++ b/training-materials/presentation/intro.html
@@ -12,7 +12,7 @@
 
   <meta name="author" content="Anton Urfels">
   <meta name="dcterms.date" content="2024-03-25">
-  <title>R for sustainable agriculute</title>
+  <title>Day 1 - R for sustainable agriculture</title>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -396,7 +396,7 @@
     <div class="slides">
 
 <section id="title-slide" class="quarto-title-block center">
-  <h1 class="title">R for sustainable agriculute</h1>
+  <h1 class="title">Day 1 - R for sustainable agriculture</h1>
   <p class="subtitle">Reproducible research and digital landscapes</p>
 
 <div class="quarto-title-authors">
@@ -725,6 +725,7 @@ Coefficients:
 <section id="questions-1" class="slide level2">
 <h2>Questions?</h2>
 <p>Off to the real fun! And using your own examples.</p>
+<p>You can download all of the course materials incl.&nbsp;this deck from this github repo: <a href="https://github.com/AntonUrfels/data-works" class="uri">https://github.com/AntonUrfels/data-works</a>. You can also look at them at the link of the corresponding website <a href="https://antonurfels.github.io/data-works/" class="uri">https://antonurfels.github.io/data-works/</a>.</p>
 
 <img src="irri.png" class="slide-logo r-stretch"><div class="footer footer-default">
 
